# mindForge

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  AGENTS.md  README.md  TODO.md  eslint.config.js  mcp.json  package-lock.json  package.json  patch.diff  pnpm-lock.yaml  prettier.config.cjs  tmp_prebuilt.js  tsconfig.base.json  turbo.json
.cursor/commands/: git-commit.md
.workflow/: _tmp_readme.md  workflow_Repository_Guidelines_2025-09-12.md  workflow_Rust索引扫描器_2025-09-12.md  workflow_修复dev启动_2025-09-10.md  workflow_初始化与基础设施_2025-09-10.md  workflow_样式体系加固与规范_2025-09-11.md  workflow_样式重构_antd_2025-09-12.md  workflow_桌面端UI与类型修复_2025-09-11.md  workflow_桌面端图标与构建修复_2025-09-11.md  workflow_桌面迁移_Electron_2025-09-12.md  workflow_统一gitignore规则_2025-09-11.md  workflow_聊天气泡与头像修复_2025-09-11.md  workflow_聊天界面布局_2025-09-11.md  workflow_聊天输入框修复_2025-09-12.md  workflow_自定义标题栏与窗口控制_2025-09-11.md  workflow_项目解析_2025-09-12.md
apps/api/: package.json
apps/api/scripts/: smoke.ts
apps/api/src/: app.ts  server.ts
apps/desktop/: index.html  mcp.json  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  tsconfig.mcp.json  vite.config.ts
apps/desktop/dist-electron/: index.html  main.js  main.js.map  main.mjs  main.mjs.map  preload.js  preload.js.map  (+2 more)
crates/indexer/: Cargo.toml  README.md
crates/indexer/src/: ignore.rs  lib.rs  scanner.rs
docs/: AI-Agent-Implementation-Plan.md  AI-Agent-Tech-Stack-Tauri-Qdrant.md
scripts/: check-rust.ps1  react-agent-test.ts  test-openai-config.js
(+97 files in other folders)
