[package]
name = "mindforge_indexer"
version = "0.1.0"
edition = "2021"
description = "MindForge 仓库文件扫描器（忽略规则 + 二进制检测 + NDJSON CLI）"
license = "MIT OR Apache-2.0"

[lib]
name = "mindforge_indexer"
path = "src/lib.rs"

[[bin]]
name = "mf-indexer"
path = "src/bin/mf-indexer.rs"

[dependencies]
anyhow = "1"
ignore = "0.4"
content_inspector = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

